opam-version: "2.0"
name: "laurent"
version: "1.3.0"
maintainer: "Namdak Tonpa <maxim@synrc.com>"
authors: [ "Groupoid Infinity" ]
homepage: "https://laurent.groupoid.space/"
bug-reports: "https://github.com/groupoid/laurent/issues"
dev-repo: "https://github.com/groupoid/laurent"
synopsis: "Analytical Type System"
license: "ISC"
depends: [
  "dune" {>= "2.9"}
  "zarith" {>= "1.12"}
  "z3" {>= "4.14"}
  "num" {>= "1.5"}
  "ocaml" {>= "4.14"}
  "menhir" {>= "20240715"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
